# taplic4

./: README.md  taplic4.cabal
app/: Main.hs
app/04/: Main.hs
app/06_naive/: Main.hs
src/: ArExp.hs  Lambda.hs
src/04_ArExpr/: ArExp.hs
src/06_UntypedLambda/: Evaluation.hs  Lambda.hs  Parser.hs  Syntax.hs
src/06_UntypedLambda_Naive/: Contextifier.hs  Evaluation.hs  EvaluationNaive.hs  Lexics.hs  Parser.hs  ParserNaive.hs  Syntax.hs  SyntaxNaive.hs
